
[metadata]
name = oneclassclassification
version = 1.0.0
author = Hayden D. Hampton
author_email = haydendhampton@gmail.com
description = One-class classification algorithms
# long_description = file: README.md
# long_description_content_type = text/markdown
license = MIT License


[options]
zip_safe = False
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
install_requires =
    numpy
    pandas
python_requires = >=3.10.12

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts = 
#     my-example-utility = example.example_module:main

# [options.extras_require]
# notebook = matplotlib

# [options.package_data]
# example = data/schema.json, *.txt
# * = README.md



